...
    <string name="contributors_list_title">Contributors</string>
    <string name="contributors_list_subtitle">These are the people who contributed to the development of this app.</string>
    <string name="back">Back</string>
    <string name="no_items_found">No items found</string>
    <string name="please_insert_one">Please insert one</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="date_format">Date format</string>
    <string name="date_format_desc">The date format you prefer to see on the items.</string>
    <string name="choose_the_date_format">Choose the date format</string>
    <string name="locale_formats">Locale formats</string>
    <string name="other_formats">Other formats</string>
    <string name="your_food_is_expiring">Your food is expiring!</string>
    <string name="notification_time">Notification time</string>
...
