...
import com.lorenzovainigli.foodexpirationdates.view.preview.LanguagePreviews
import kotlinx.collections.immutable.ImmutableList
import kotlinx.collections.immutable.toImmutableList
import java.text.SimpleDateFormat
import java.util.Calendar

const val DateFormatDialog = "DateFormatDialog"

@Composable
fun DateFormatDialog(
    isDialogOpen: Boolean = true,
    onDismissRequest: () -> Unit = {},
    onClickDate: (Context, String) -> Unit = { _, _ -> },
...
